--- a/generator/base/templates/package.json
+++ b/generator/base/templates/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "boom": "^7.2.0",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
