--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/codotype/codotype-vuejs-vuex-bootstrap-generator#readme",
   "dependencies": {
-    "codotype-generator": "git+https://github.com/codotype/codotype-generator.git"
+    "@codotype/generator": "^0.1.1"
+  },
+  "devDependencies": {
+    "@codotype/runtime": "^0.3.0",
+    "@codotype/blueprints": "^0.1.0"
   }
 }
