--- a/generator/base/templates/package.json
+++ b/generator/base/templates/package.json
@@ -2,7 +2,8 @@
   "name": "expressjs_boilerplate",
   "version": "1.0.0",
   "scripts": {
-    "start": "nodemon -L ./server/bin/www.js",
+    "start": "node ./server/bin/www.js",
+    "dev": "nodemon -L ./server/bin/www.js",
     "test": "mocha --exit",
     "apidoc": "apidoc -i ./server/api -o doc/"
   },
