--- a/generator/docker_compose/templates/docker-compose-dev.yml
+++ b/generator/docker_compose/templates/docker-compose-dev.yml
@@ -4,32 +4,21 @@ services:
 
   mongo:
     image: mongo
-    container_name: '<%= container_name_prefix %>-mongo'
+    container_name: '<%= blueprint.identifier %>-mongo'
     ports:
       - "27017:27017"
 
   mongo_admin:
     image: mongo-express
-    container_name: '<%= container_name_prefix %>-mongo-express'
+    container_name: '<%= blueprint.identifier %>-mongo-express'
     links:
       - mongo
     ports:
       - "8081:8081"
-  <% if (seedData) { %>
-  mongo-seed:
-    container_name: '<%= container_name_prefix %>-mongo-seed'
-    build:
-      context: ./docker
-      dockerfile: Dockerfile-MongoSeed
-    links:
-      - mongo
-    depends_on:
-      - mongo
-  <% } %>
 
   # express:
   #   build: './web_api'
-  #   container_name: '<%= container_name_prefix %>-web-api'
+  #   container_name: '<%= blueprint.identifier %>-web-api'
   #   ports:
   #     - "4000:4000"
   #   links:
