--- a/generator/docker_compose/templates/docker-compose.yml
+++ b/generator/docker_compose/templates/docker-compose.yml
@@ -16,14 +16,12 @@ services:
     ports:
       - "8081:8081"
 
-  # express:
-  #   build: './web_api'
-  #   container_name: '<%= blueprint.identifier %>-web-api'
-  #   ports:
-  #     - "4000:4000"
-  #   links:
-  #     - mongo
-  #     - redis
-  #   depends_on:
-  #     - mongo
-  #     - redis
+  express:
+    build: './'
+    container_name: '<%= blueprint.identifier %>-web-api'
+    ports:
+      - "4000:4000"
+    links:
+      - mongo
+    depends_on:
+      - mongo
