--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "codotype-nodejs-express-mongodb-generator",
-  "version": "0.4.0",
+  "version": "0.2.0",
   "description": "A codotype generator for Node.js, Express, MongoDB, &amp; Docker",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
