--- a/package.json
+++ b/package.json
@@ -1,27 +1,15 @@
 {
   "name": "codotype-nodejs-express-mongodb-generator",
   "version": "0.2.0",
-  "description": "A codotype generator for Node.js, Express, MongoDB, &amp; Docker",
+  "description": "A Codotype generator for Node.js, Express, MongoDB &amp; Docker",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js"
+    "serve": "codotype generator-serve"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/codotype/codotype-nodejs-express-mongodb-generator.git"
-  },
-  "author": "",
+  "author": "Alexander Schwartzberg",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/codotype/codotype-vuejs-vuex-generator/issues"
+    "url": "https://github.com/codotype/codotype-nodejs-express-mongodb-generator/issues"
   },
-  "homepage": "https://github.com/codotype/codotype-nodejs-express-mongodb-generator#readme",
-  "dependencies": {
-    "@codotype/generator": "^0.4.0"
-  },
-  "devDependencies": {
-    "@codotype/blueprints": "^0.2.0",
-    "@codotype/util": "^0.3.0",
-    "@codotype/runtime": "^0.5.0"
-  }
+  "homepage": "https://github.com/codotype/codotype-nodejs-express-mongodb-generator#readme"
 }
