--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codotype-nodejs-express-mongodb-generator",
+  "name": "@codotype/codotype-nodejs-express-mongodb-generator",
   "version": "0.2.0",
   "description": "A Codotype generator for Node.js, Express, MongoDB &amp; Docker",
   "main": "index.js",
